# impit

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.alpine  Makefile  README.md  cliff.toml  eslint.config.mjs  package-lock.json  package.json  renovate.json  tsconfig.tsbuildinfo
.actor/: actor.json  input_schema.json
.claude/: settings.local.json
.devcontainer/: devcontainer.json
.github/workflows/: cli-release.yaml  cli-release.yml  docs.yaml  format.yaml  node-release.yaml  node-release.yml  node-test.yaml  python-code-checks.yaml  python-release.yaml  python-test.yaml  update-draft-pr.yaml  update-new-issue.yaml
impit/: Cargo.toml  README.md
impit-cli/: Cargo.toml  Changes.md
impit-cli/src/: headers.rs  main.rs
impit-node/: .gitignore  .npmignore  CHANGELOG.md  Cargo.toml  README.md  date.txt  dts-header.d.ts  errors.js  index.d.ts  index.js  index.wrapper.js  package.json  pnpm-lock.yaml  request.js  vanilla-fallback.js
impit-node/.github/workflows/: CI.yml
impit-node/__test__/: index.spec.mjs
impit-node/npm/darwin-arm64/: package.json
impit-node/npm/darwin-x64/: package.json
impit-node/npm/linux-arm64-gnu/: package.json
impit-node/npm/linux-arm64-musl/: package.json
impit-node/npm/linux-x64-gnu/: package.json
impit-node/npm/linux-x64-musl/: package.json
impit-node/npm/win32-arm64-msvc/: package.json
impit-node/npm/win32-x64-msvc/: package.json
impit-node/src/: abortable_stream.rs  cookies.rs  impit_builder.rs  lib.rs  request.rs  response.rs  utils.rs
impit-node/test/: basics.test.ts  errors.test.ts  fingerprints.test.ts  mock.server.ts  vanilla-fallback.helpers.ts
impit-node/test/e2e/: basic.e2e.mjs  run-e2e-tests.mjs  run-e2e-tests.mts
impit-python/: CHANGELOG.md  Cargo.toml  Makefile  pyproject.toml
impit-python/docs/: conf.py  test.py
impit-python/docs/_static/: custom.css
impit-python/docs/api/: async-client.rst  client.rst  cookies.rst  response.rst
impit-python/python/impit/: __init__.py  __init__.pyi  _impit.pyi  cookies.py  impit.pyi
impit-python/src/: async_client.rs  client.rs  cookies.rs  errors.rs  fingerprint.rs  lib.rs  request.rs  response.rs
impit-python/test/: async_client_test.py  async_test.py  basic_client_test.py  basic_test.py  httpbin.py  no_client_test.py  response_test.py  setup_proxy.py
impit/.github/workflows/: cli-release.yaml  docs.yaml  node-release.yaml  node-test.yaml  python-test.yaml
impit/examples/: basic.rs  custom_fingerprint.rs
impit/impit/: Cargo.toml
impit/impit-cli/src/: headers.rs  main.rs
impit/impit-node/: CHANGELOG.md  index.d.ts  index.js  package-lock.json  package.json
impit/impit-node/npm/darwin-x64/: package.json
impit/impit-node/src/: impit_builder.rs  lib.rs  request.rs
impit/impit-node/test/: mock.server.ts
impit/impit-python/: CHANGELOG.md  pyproject.toml
impit/impit/src/: impit.rs
impit/impit/src/fingerprint/: mod.rs  types.rs
impit/impit/src/fingerprint/database/: chrome.rs  edge.rs  safari.rs
impit/impit/src/response_parsing/: mod.rs
impit/impit/src/tls/: mod.rs
impit/src/: errors.rs  fingerprint.rs  http3.rs  impit.rs  lib.rs  request.rs  tls.rs
impit/src/fingerprint/: database.rs  mod.rs  types.rs
impit/src/fingerprint/database/: chrome.rs  edge.rs  firefox.rs  safari.rs
impit/src/fingerprints/: mod.rs
impit/src/http_headers/: mod.rs  statics.rs
impit/src/response_parsing/: mod.rs
impit/src/tls/: ffdhe.rs  mod.rs
scripts/: generate-browser-headers.ts
src/: browser-headers.ts  curl-impersonate-http-client.ts  got-scraping-http-client.ts  http-client-manager.ts  main.ts  urls.ts
