[workspace]
resolver = "2"

members = [
    "impit",
    "impit-cli",
    "impit-node",
    "impit-python",
]

[patch.crates-io]
h2 = { git = "https://github.com/apify/h2", rev = "7f393a728a8db07cabb1b78d2094772b33943b9a" }
rustls = { path = "../rustls/rustls" }

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
