[workspace]
resolver = "2"

members = [
    "impit",
    "impit-node",
    "impit-python",
]

[patch.crates-io]
h2 = { git = "https://github.com/apify/h2", rev = "0c053aae81ba3be37511d7e2f472203588c8c025" }
rustls = { git = "https://github.com/apify/rustls", branch = "impit-main" }
tower-http = { git = "https://github.com/apify/tower-http", rev="f9efc0d9193e774d33aedc1022b922efefc22052" }
hyper-util = { git = "https://github.com/apify/hyper-util", rev="9b7795dfd7158fc55e7c84b65bf1dae1d2dea67d" }

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
